Respect signing tool config; fix sq certDDir resolution